# continuous_integration

./: CMakeLists.txt  CMakeLists_8txt.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals.html  globals_func.html  null_8cpp.html  parte1__1_8h.html  parte1__1_8h__incl.dot  parte1__1_8h_source.html  parte1__2_8h.html  parte1__2_8h__incl.dot  parte1__2_8h_source.html  parte2_8h.html  parte2_8h__incl.dot  parte2_8h_source.html  parte3_8h.html  parte3_8h__incl.dot  parte3_8h_source.html  sonar-project.properties
.github/workflows/: build.yml  documentation.yml  pre-commit.yml  ubuntu.yml
app/: CMakeLists.txt  main.cpp  mcode1.txt  mcode2.txt  mcode3.txt  transmission1.txt  transmission2.txt
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
src/: CMakeLists.txt  parte1_1.h
tests/: CMakeLists.txt  test_part1.cc
